@@ -383,12 +383,15 @@ static int SetObjectList(XMSelectionDialog *d, int specid)
   }
 
   grobj_name    aname;
-  char          *names[GROBJ_MAXOBJECTS];
-  grobj_generic *objects[GROBJ_MAXOBJECTS];
-  assert(sizeof(names) == (GROBJ_MAXOBJECTS * sizeof(char *)));
-  assert(sizeof(objects) == (GROBJ_MAXOBJECTS * sizeof(grobj_generic *)));
+  // char          *names[GROBJ_MAXOBJECTS];
+
+  char** names = new char*[nobject];
+  // grobj_generic *objects[GROBJ_MAXOBJECTS];
+
+  grobj_generic** objects = new grobj_generic*[nobject];
+
   Xamine_GetSpectrumObjects(specid,
-			    objects, GROBJ_MAXOBJECTS,
+			    objects, nobject,
 			    True);
 
   int i;
@@ -410,6 +413,9 @@ static int SetObjectList(XMSelectionDialog *d, int specid)
   for(i = 0; i < nobject; i++) {
     delete [] names[i];
   }
+  delete []names;
+  delete []objects;
+
   return nobject;
 }
 
