@@ -678,10 +678,11 @@ static char *FormatGrobjInfo(int specno)
 {
   char *result;
   char element[20];
-  grobj_generic *objects[GROBJ_MAXOBJECTS];
+  int  nobjects   = Xamine_GetSpectrumObjectCount(specno);
+  grobj_generic** objects = new grobj_generic*[nobjects];
   int object_count = Xamine_GetSpectrumObjects(specno, 
 					       objects,
-					       GROBJ_MAXOBJECTS,
+					       nobjects,
 					       True);
 
   /* We take two passes through this... first we size the names of all
@@ -733,6 +734,7 @@ static char *FormatGrobjInfo(int specno)
   }
   strcat(result, "\n");
 
+  delete []objects;
 
   /* Return the string. */
 
@@ -756,10 +758,12 @@ FormatGateInfo(int specno)
 {
   char *result;
   char element[20];
-  grobj_generic *objects[GROBJ_MAXOBJECTS];
+  int  nobjects  = Xamine_GetSpectrumGateCount(specno);
+  
+  grobj_generic** objects = new grobj_generic*[nobjects];
   int object_count = Xamine_GetSpectrumGates(specno, 
 					       objects,
-					       GROBJ_MAXOBJECTS,
+					       nobjects,
 					       True);
 
   /* We take two passes through this... first we size the names of all
@@ -812,7 +816,7 @@ FormatGateInfo(int specno)
     }
   }
   strcat(result, "\n");
-
+  delete []objects;
 
   /* Return the string. */
 
